<resources>
    <string name="app_name">BlackJack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Баланс: </string>
    <string name="image_error">image error</string>
    <string name="join_room">Войти в комнату</string>
    <string name="dealer">Диллер:</string>
    <string name="player">Игрок:</string>
    <string name="doble">Удвоить!</string>
    <string name="add">Ещё!</string>
    <string name="stop">Стоп!</string>
    <string name="no">Нет</string>
    <string name="do_bet">Введите ставку</string>
    <string name="bet">Поставить!</string>
    <string name="bet_hint">Ставка</string>
</resources>