<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:clipToPadding="false">
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardview_dark_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_bet"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/balance_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/bet_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bet_hint"
                android:textColor="@color/white"
                android:inputType="number"
                android:textColorHint="#AFA9A9"
                android:autofillHints="1000" />
            <Button
                android:id="@+id/bet_button"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/bet"
                android:background="@drawable/button_gradient"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>